--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "history": "3.0.0",
     "immutable": "3.8.1",
     "ip": "1.1.3",
+    "lodash": "^4.13.1",
     "minimist": "1.2.0",
     "react": "15.2.1",
     "react-dom": "15.2.1",
